old-stuff/client-api/www-demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: www-demo-ingress
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-issuer"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.demo.jasonmarston.co.uk
    secretName: www-demo-secrets
  rules:
  - host: www.demo.jasonmarston.co.uk
    http:
      paths:
      - pathType: Prefix
        path: /api(/|$)(.*)
        backend:
          service:
            name: client-api-service
            port:
              number: 8080
      - pathType: Prefix
        path: /(|$)(.*)
        backend:
          service:
            name: app1-service
            port:
              number: 8080
